--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,9 @@ install:
 build: off
 
 test_script:
+  # Install dependency Distribution::Common
+  - git clone https://github.com/ugexe/zef %APPVEYOR_BUILD_FOLDER%\..\zef
+  - perl6 -I %APPVEYOR_BUILD_FOLDER%\..\zef\lib %APPVEYOR_BUILD_FOLDER%\..\zef\bin\zef --depsonly install .
   - prove -v -e "perl6 -Ilib" t/
 
 shallow_clone: true
